--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">picassoroiobj</string>
+    <string name="app_name">IV Object Detection Demo</string>
     <string name="tv_take_photo">Tomar foto</string>
     <string name="tv_description">Seleciona una foto o toma captura</string>
     <string name="tv_placeholder">Select or Capture Image</string>
